Minecraft is loading finally.